# poly-what

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/becker/: resolved.parquet
scripts/: daily_validation.sh
src/watchdog/: __init__.py  cli.py
src/watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/watchdog/backtest/: __init__.py  backtester.py  go_live_gate.py  historical_loader.py  metrics.py
src/watchdog/core/: config.py  exceptions.py  logging.py
src/watchdog/db/: init.py  models.py  session.py
src/watchdog/execution/: __init__.py  order_executor.py
src/watchdog/llm/: __init__.py  executor.py  router.py  types.py
src/watchdog/market_data/: __init__.py  manifold_client.py  polymarket_cli.py  polymarket_rest.py
src/watchdog/news/: __init__.py  ingest.py  models.py  source_gdelt_gkg.py  source_marketaux.py  source_polymarket_volume.py  sources.py
src/watchdog/risk/: __init__.py  kelly.py  vpin.py
src/watchdog/scripts/: __init__.py  download_becker_data.py  run_backtest.py  run_becker_analysis.py  run_live_validation.py  run_market_maker.py  run_paper_trading.py  run_snapshot_collector.py
src/watchdog/services/: market_sync.py  pipeline.py
src/watchdog/signals/: __init__.py  calibration.py  telegram_bot.py
src/watchdog/strategies/: arbitrage_detector.py  exit_manager.py
src/watchdog/trading/: maker_model.py
tests/: test_backtest.py  test_backtest_metrics.py  test_backtester.py  test_calibration.py  test_db_schema.py  test_go_live_gate.py  test_healthcheck.py  test_manifold_client.py  test_market_maker.py  test_metrics.py  test_news_sources.py  test_order_executor.py  test_paper_trading.py  test_pipeline.py  test_risk.py
