[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchdog"
version = "0.1.0"
description = "Watchdog: dual-agent prediction market intelligence system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel" }
]
dependencies = [
  "alembic>=1.14.0",
  "anthropic>=0.25.0",
  "aiosqlite>=0.20.0",
  "duckdb>=1.1.3",
  "feedparser>=6.0.11",
  "google-generativeai>=0.5.0",
  "httpx>=0.28.1",
  "numpy>=2.0.0",
  "openai>=1.0.0",
  "pandas>=2.2.3",
  "praw>=7.8.1",
  "py-clob-client>=0.18.0",
  "pyarrow>=18.1.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-telegram-bot>=20.0",
  "python-dateutil>=2.9.0.post0",
  "SQLAlchemy>=2.0.36",
  "tenacity>=9.0.0",
  "typer[all]>=0.12.0",
  "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.4",
]

[project.scripts]
watchdog = "watchdog.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["E501"]
